Bug 323822 - Regression: cannot resize columns in the message list widget
Summary: Regression: cannot resize columns in the message list widget
Status: RESOLVED FIXED
Alias: None
Product: trojita
Classification: Applications
Component: Desktop GUI (other bugs)
Version First Reported In: git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Lübking
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-21 08:10 UTC by Jan Kundrát
Modified: 2013-08-23 04:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Kundrát 2013-08-21 08:10:37 UTC
Thomas, since commit bda1ce331b4a8d37c34b5224aef18cb9f268e836, it is no longer possible to resize individual fields in the header view of the message listing (MsgListWidget) via mouse when the server doesn't support the SORT extension. The reason for that is that the event filter eats the relevant mouse events and interprets them as a request to flip the sort order instead.

Could you please take a look? It might be neccessary to move the logic for sorting into the model and not handle that through the event filter on the widget.
Comment 1 Thomas Lübking 2013-08-21 09:20:45 UTC
Appending
" && static_cast<QWidget*>(o)->cursor().shape() == Qt::ArrowCursor" to the Press/Release/LeftButton conditon will do.

Either you inject it or I can provide a patch at ~18:30-19:00 CEST
Comment 2 Thomas Lübking 2013-08-23 04:40:12 UTC
Git commit 7d030ac1895c0546be80af6284d388b4be835368 by Thomas Lübking.
Committed on 21/08/2013 at 16:25.
Pushed by luebking into branch 'master'.

do not intercept linked header clicks for resizes

and shuffles
REVIEW: 112190

M  +15   -7    src/Gui/Window.cpp
M  +1    -0    src/Gui/Window.h

http://commits.kde.org/trojita/7d030ac1895c0546be80af6284d388b4be835368