do not intercept linked header clicks for resizes

and shuffles

BUG: 323822
REVIEW: 112190